# prompt-engine

./: .clinerules  .dockerignore  .env.example  .gitignore  .hermes-tmp.yfjb43  .project-meta.json  AGENTS.md  ARCH-F3-prompt-template.md  CHANGELOG-v0.9.0.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.en.md  README.md  config.yaml  docker-compose.yml  end_to_end_test.py  feedback_db.json  package.json  pyproject.toml  requirements.txt  test_verify.py
01-docs/: ARCH-F1-agent-skill.md  ARCH-F1-template-driven.md  ARCH-F12-rewrite.md  ARCH-F13-feedback-ui.md  ARCH-F2-image-preview.md  ARCH-F2-rag-seed.md  ARCH-F4-cache.md  ARCH-F7-docker.md  ARCH-F9-batch-ui.md  ARCH-dashboard.md  CHANGELOG.md  FEATURE-LIST-2026-07-03.md  INTEGRATION.md  MANUAL.md  PM-PRD-v0.10.0.md  PM-PRD-v0.14.0.md  PM-PRD-v0.15.0.md  PM-PRD-v0.16.1.md  PM-PRD-v0.19.0.md  PM-PRD-v0.9.2.md  PRD.md  README.en.md  README.md
03-config/: config.yaml
04-tests/: test_ab.py  test_batch.py  test_cache.py  test_config.py  test_dashboard_api.py  test_dsl_parser.py  test_evaluator.py  test_feedback.py  test_feedback_weights.py  test_gpt4o_prompts.py  test_infinity_features.py  test_mj_style_integration.py  test_optimizer.py  test_preview_fix.py  test_prompt_template.py  test_providers.py  test_qa_comprehensive.py  test_rag_seed.py  test_resources_preview.py  test_reverse.py  test_seed.py  test_strategies.py  test_strategy_integration.py  test_style_category_classifier.py  test_template_loader.py  test_v011_user_control.py  test_v012_feedback_disturb.py  test_v015_translation.py  test_v018_english_output.py  (+1 more)
(+184 files in other folders)
