[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-engine"
version = "0.21.1"
description = "Image generation prompt optimization engine - SDK, REST API & MCP Server"
authors = [{ name = "Prompt Engine Team" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "shared-models",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "mcp>=1.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]
all = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.scripts]
prompt-engine = "prompt_engine.cli:main"

[tool.setuptools.packages.find]
include = ["prompt_engine*"]